Added header image, left style for some sections ol/ul styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Agrupación de Enfermeros Especialistas en Médico Quirúrgica</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -23,9 +23,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">AEEMEQ</h1>
 						</div>
 
 					<!-- Nav -->
@@ -44,9 +42,9 @@
 
 							-->
 							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Introducción</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Sobre nosotros</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Desarrollo de especialidades</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -76,31 +74,33 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2>Agrupación de Enfermeros Especialistas en <strong>Médico Quirúrgica</strong></h2>
+
+								<p>Nacemos en <strong>A Coruña</strong> en <stronh>Febrero de 2016</stronh> con la finalidad de reconocer
+									y reivindicar el trabajo de dichos profesionales, así como su condición de especialistas dentro del ámbito sanitario
+									en las diferentes unidades donde trabajan</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Leer más</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Quienes somos -->
+					<section id="quienes-somos" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Quienes somos</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Somos un grupo de enfermeros que trabajan en el <strong>CHUAC</strong> y su área sanitaria,
+								vinculados a diferentes unidades dentro del hospital,
+								que debido a la situación actual que se está viviendo en relación a las especialidades de enfermería,
+								afirmamos que la especialidad <strong>Médico-Quirúrgica</strong> está siendo olvidada por la administración,
+								cuando es la especialidad que corresponde a la mayoría de profesionales que trabajan actualmente.</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
@@ -151,26 +151,55 @@
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="desarrollo-de-especialidades" class="three">
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Desarrollo de las especialidades</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>El Real Decreto 450/2005 de 22 de abril, es la normativa actual por la que se regula la obtención del título de Enfermero especialista.
+								Expedido por el Ministerio de Educación y Ciencia, es obligatorio para poder ejercer como profesional de una especialidad enfermera.
+								El texto, publicado en el BOE de 6 de Mayo de 2005, actualiza el catálogo de Especialidades de Enfermería y establece que son siete:
+								Obstétrico-ginecológica, Salud Mental, Trabajo, Geriátrica, Pediátrica, Familiar y Comunitaria y Médico-quirúrgica.</p>
 
 						</div>
 					</section>
 
-				<!-- Contact -->
+					<!-- Requisitos -->
+						<section id="requisitos" class="four left">
+							<div class="container">
+
+								<header>
+									<h2>Requisitos para solicitar el acceso al título de especialista por la vía extraordinaria</h2>
+								</header>
+
+								<p>Los aspirantes deberán encontrarse en una de las siguientes situaciones:</p>
+								<ol>
+									<li>Haber ejercido como enfermero las actividades propias de la especialidad que se solicite durante un período mínimo de cuatro años.</li>
+									<li>Haber ejercido como enfermero las actividades propias de la especialidad que se solicite durante un período mínimo de dos años,
+										 siempre que, además, se acredite la adquisición de una formación continuada acreditada, según lo previsto en la Ley 44/2003,
+										 de 21 de noviembre, de al menos 40 créditos en el campo de la respectiva especialidad.
+										 Se considerará cumplido el período de formación complementaria cuando el interesado acredite estar en posesión de
+										 un título de posgrado de carácter universitario que incluya una formación relacionada con la respectiva especialidad
+										 no inferior a 20 créditos o 200 horas.</li>
+									<li>Haber ejercido durante al menos tres años como profesor de Escuelas Universitarias de Enfermería y adscritas, en áreas de
+										conocimiento relacionadas con la especialidad de que se trate, siempre que, además, se acredite al menos
+										un año de actividad asistencial en actividades propias de la especialidad solicitada.</li>
+
+								</ol>
+
+								<p>Estos requisitos deberán haberse reunido con anterioridad a la fecha de publicación en el «Boletín Oficial del Estado»
+									de la convocatoria de la prueba anual de carácter estatal en la que, por primera vez, se oferten plazas de formación en la especialidad
+									cuyo título se aspira a obtener. Para todas las especialidades, la formación complementaria puede haberse realizado
+									durante el plazo de presentación de solicitudes establecido.</p>
+
+							</div>
+						</section>
+
+				<!-- Contacto -->
 					<section id="contact" class="four">
 						<div class="container">
 
